Wed Jul 13 16:29:14 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * tools/dissector/giop_base.cpp:
        * tools/dissector/sample_manager.h:
        * tools/dissector/sample_manager.cpp:

          Fixed some fuzz and compiler errors. Error was due to failure to
          hash std::string on some platforms, so I reverted to using const
          char * as the key.

Wed Jul 13 15:59:41 UTC 2011  Dean Wette  <wette_d@ociweb.com>

        * tools/modeling/tests/setup.pl:
        * tools/modeling/validation/modelvalidation/build.properties:
        * tools/modeling/validation/modelvalidation/build.xml:
        * tools/modeling/validation/modelvalidation/src/java/com/ociweb/xml/util/XMLUtil.java:
        * tools/modeling/validation/modelvalidation/src/java/org/opendds/modeling/validation/OpenDDSModelValidator.java:

          Tweaks to the validation API, and improvements made for running funtional tests as part of nightly build.

Tue Jul 12 22:47:46 UTC 2011  Phil Mesnier  <mesnier_p@ociweb.com>

        * tools/dissector/sample_dissector.h:
        * tools/dissector/sample_dissector.cpp:
        * tools/dissector/sample_manager.h:
        * tools/dissector/sample_manager.cpp:

          Moved String and WString from a specialized dissector type to a
          built in type.

          Completed the handling of Unions.

          Simplified the initialization of types to be more able to be
          data-driven with a small set of type-specific factories.

Tue Jul 12 21:21:24 UTC 2011  Jeff Schmitz  <schmitz_j@ociweb.com>

        * tools/modeling/plugins/org.opendds.modeling.sdk.model/xsl/preprocess.xsl:

          Copy in referred QOS policies in an external topic.

        * tools/modeling/tests/Chained_Topic/Chained_Topic.codegen:
        * tools/modeling/tests/ReferExternalProj/ReferExternalProj.codegen:
        * tools/modeling/tests/ReferExternalProj/ReferExternalProj.mwc:
        * tools/modeling/tests/ReferExternalProj/ReferExternalProj.opendds: